--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mw/module-pokemon",
+    "name": "bmxmiwe/module-pokemon",
     "description": "Module responsible for pokemon functionality",
     "type": "magento2-module",
     "license": "GPL-3.0",
